--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,7 @@ logging:
       buzas:
         springstorehomework:
           controllers: error
+          services: error
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/springStore?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
