--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,15 @@
             <artifactId>spring-data-elasticsearch</artifactId>
             <version>4.4.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
